--- a/css/prop_desc.css
+++ b/css/prop_desc.css
@@ -9,6 +9,92 @@
     --iq-warning: #FF9770;
      }
 
+     ::-webkit-scrollbar {
+        width: 10px;
+        background-color: var(--iq-neutral2);
+      }
+      
+      /* Track */
+      ::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 5px var(--iq-primary); 
+      }
+       
+      /* Handle */
+      ::-webkit-scrollbar-thumb {
+        background: var(--iq-accent); 
+      }
+      
+      /* Handle on hover */
+      ::-webkit-scrollbar-thumb:hover {
+        background: #967814; 
+      }
+
+.header {
+    font-family: "Montserrat", sans-serif!important;
+    font-size: small!important;
+}
+.logo img {
+    height: 36px;
+}
+.header i {
+    font-size: 1.2rem!important;
+}
+
+.catable  {
+    border-collapse:collapse;border-spacing:0;
+}
+.catable td{
+    border-color:var(--iq-accent);
+    border-style:solid;border-width:1px;
+    font-family:Arial, sans-serif;font-size:14px;
+    overflow:hidden;padding:10px 15px;
+    word-break:normal;
+}
+.catable th{
+    border-color:var(--iq-accent);
+    border-style:solid;border-width:1px;font-family:Arial, sans-serif;
+    font-size:14px;
+    font-weight:normal;
+    overflow:hidden;
+    padding:10px 15px;
+    word-break:normal;
+}
+.catable .catable-0dl8{
+    color:#fffc9e!important;
+    text-align:left;
+    vertical-align:top;
+}
+.catable .catable-7vru{
+    color:#fffc9e;
+    text-align:left;
+    vertical-align:top;
+}
+.catable .catable-bnmw{
+    background-color:#000000;
+    border-color:#000000;
+    color:#fffc9e;
+    text-align:left;
+    vertical-align:top;
+}
+.catable th{
+    text-align:center!important;
+    vertical-align:top;
+}
+
+.catable-0lax {
+    text-align: left!important;
+    color: var(--iq-secondary);
+}
+
+.catable-alax {
+    color: var(--iq-accent);
+}
+
+/* Global */
+body {
+    background: linear-gradient(175deg,#57575795, #d4af3795),  url('../img/propdesc_bg.png') no-repeat center / cover;
+}  
+
 div { word-break: break-all; }
 
 img { max-width:100%; }
@@ -41,11 +127,16 @@ a {
 /* Page Header */
 .page-header {
     background: var(--iq-neutral2);
-    margin: 0px 0px 0px;
-    padding: 15px 0px 40px;
+    margin: -30px 0px 0px;
+    padding: 0px 40px;
+    border-bottom: 4px solid var(--iq-accent);
     color: var(--iq-accent);
-    text-transform: uppercase;
     }
+    .page-header p {
+        margin-top: 80px;
+        line-height: 0.88rem;
+        color: var(--iq-accent);
+        }
 
 
 
@@ -63,37 +154,7 @@ a {
     padding: 0px 20px;
 }
 .caption .span4 {
-    border-right: 1px dotted #CCCCCC;
-    margin-right: 50%;
-    
-}
-.caption .span8 {
-    margin-left: 50%;
-    top: 5%;
-    display: inline;
-}
-.catable  {
-    border-collapse:collapse;border-spacing:0;
-}
-.catable td{
-    border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
-  overflow:hidden;padding:10px 15px;word-break:normal;
-}
-.catable th{
-    border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
-  font-weight:normal;overflow:hidden;padding:10px 15px;word-break:normal;
-}
-.catable .catable-0dl8{
-    color:#fffc9e;text-align:center;vertical-align:top
-}
-.catable .catable-7vru{
-    color:#fffc9e;text-align:left;vertical-align:top
-}
-.catable .catable-bnmw{
-    background-color:#000000;border-color:#000000;color:#fffc9e;text-align:center;vertical-align:top
-}
-.catable .catable-0lax{
-    text-align:left;vertical-align:top
+    border-right: 1px solid var(--iq-accent);
 }
 .caption h3 {
     color: var(--iq-accent);
@@ -109,42 +170,65 @@ a {
         .btn.btn-mini {
             background: var(--iq-accent);
             border-radius: 0 0 0 0;
-            color: #fbf4e0;
+            color: var(--iq-secondary);
             font-size: 0.63rem;
             text-shadow: none !important;
             }
 .carousel-control {
-    padding-top: 20%;
+    top: 33%;
+    color: var(--iq-accent)!important;
+    border: 3px solid var(--iq-accent);
 }
 
-
-
-
-/* Footer */
-.footer {
-    margin: auto;
+.description {
+    height: 140px;
     width: 100%;
-    max-width: 960px;
-    display: block;
-    font-size: 0.69rem;
+    margin: 20px 0px;
+    padding: 20px;
+    box-sizing:border-box;
+    -moz-box-sizing:border-box;
+    -webkit-box-sizing:border-box;
+}
+
+.description .span4, .description .span8 {
+    padding: 0px 50px;
+}
+.description .span8 {
+    padding: 20px;
+    font-size: 1rem;
+}
+.description .span4 {
+    border-right: 1px solid var(--iq-accent);
+    background-color: var(--iq-neutral)!important;
+    border-radius: 20px;
+}
+.description .span4 h4 {
+    color: var(--iq-accent);
+    text-align: center;
+    border-bottom: solid var(--iq-accent);
+}
+.description h3 {
+    color: var(--iq-accent);
+    line-height: 2rem;
+    margin: 0 0 20px;
+    text-transform: uppercase;
     }
-    .footer, .footer a {
-        color: #fff;
+    .description p {
+        margin: 0 0 20px;
+        color: var(--iq-accent);
         }
-        p.right  { 
-            float: right; 
-            }
+.description .verify {
+    color: #0a576c;
+}
 
-
-
-
-/* ADD-ON
--------------------------------------------------- */
-body:after{content:"less than 320px";font-size:1rem;font-weight:bold;position:fixed;bottom:0;width:100%;text-align:center;background-color:hsla(1,60%,40%,0.7);color:#fff;height:20px;padding-top:0;margin-left:0;left:0}@media only screen and (min-width:320px){body:after{content:"320 to 480px";background-color:hsla(90,60%,40%,0.7);height:20px;padding-top:0;margin-left:0}}@media only screen and (min-width:480px){body:after{content:"480 to 768px";background-color:hsla(180,60%,40%,0.7);height:20px;padding-top:0;margin-left:0}}@media only screen and (min-width:768px){body:after{content:"768 to 980px";background-color:hsla(270,60%,40%,0.7);height:20px;padding-top:0;margin-left:0}}@media only screen and (min-width:980px){body:after{content:"980 to 1024px";background-color:hsla(300,60%,40%,0.7);height:20px;padding-top:0;margin-left:0}}@media only screen and (min-width:1024px){body:after{content:"1024 and up";background-color:hsla(360,60%,40%,0.7);height:20px;padding-top:0;margin-left:0}}
-
-::selection { background: #ff5e99; color: #FFFFFF; text-shadow: 0; }
-::-moz-selection { background: #ff5e99; color: #FFFFFF; }
+::selection { background: var(--iq-accent); color: var(--iq-secondary); text-shadow: 0; }
+::-moz-selection { background: var(--iq-accent); color: var(--iq-secondary); }
 
 a, a:focus, a:active, a:hover, object, embed { outline: none; }
 :-moz-any-link:focus { outline: none; }
 input::-moz-focus-inner { border: 0; }
+
+.bannerImage img {
+    width: 960px!important;
+    height: 505px!important;
+}
